--- a/wiki/SocialNetworkEvaluation.wiki
+++ b/wiki/SocialNetworkEvaluation.wiki
@@ -21,7 +21,10 @@ This new version of RDF OTG provides native RDF storage and Sparql querying engi
  The number of users could be change in the parameter file - params.ini. And we also modified name space, the number of friends, the number of photos, posts, comments in order to simulate different network. Example www.facebook.com for facebook, www.linkedin.com for Linkedin, etc. The triples will be saved into text file with n-triples format. The simulated data for our evaluation could be found <a href= 'https://rdfonthego.googlecode.com/files/social%20dataset.rar'>here</a>
 
 
-===2.2 Update throughput evaluation===
+===2.2 Running the experiments===
+ In our framework, we provide two different Graphs to handle the data. The first one is OTGGraph, this is a single view graph, it doesn't contains the Data Consolidation or ID Resolver. The second one is the MasterGraph, which provides you an unified view of data when retrieving data from different sources. The "Data Consolidation" and "ID Resolver" will operate data automatically when they find two ID are matched. It's also keep your data distinct from different sources and you can trace back you data using graph named query(Example in part 3 of the evaluation). 
+
+====2.2.1 Update throughput evaluation====
  After generating the simulated graph, we put the n-triples data files into SD card under folder 'Experiment'. On Galaxy and Nexus, we can put them into their virtual removable storage. The Android OS will create an virtual path to copied directory and treat it as it is in the external storage. Thus we can get access to these files by the same way on 3 devices.
 
 {{{
@@ -88,7 +91,52 @@ This new version of RDF OTG provides native RDF storage and Sparql querying engi
  The experiments stopped when the loading finishes or the application crashes due to out of heap memory.
 
 ===2.3 Comparing query evaluation===
- For evaluating the query processor, we implemented Integration application with both Jena TDB and RDF OTG. The applications could be found in the download of this project. With each application, we set up 45 profiles(15 in each dataset) on HTC, 180 profiles(60 in each data set) on GALAXY, 120 profiles(40 in each data set) on NEXUS 7. After than we measure the response time of each query.
+ For evaluating the query processor, we implemented Integration application with both Jena TDB and RDF OTG. The applications could be found in <a href= 'https://play.google.com/store/apps/details?id=org.openintents.filemanager&feature=search_result#?t=W251bGwsMSwxLDEsIm9yZy5vcGVuaW50ZW50cy5maWxlbWFuYWdlciJd'>here</a>. With each application, we set up 45 profiles(15 in each dataset) on HTC, 180 profiles(60 in each data set) on GALAXY, 120 profiles(40 in each data set) on NEXUS 7. After than we measure the response time of each query.
+
+{{{//Example code setup data for second experiment.
+static void load_htc() {
+    FileUtil fileUtils = new FileUtil(fileName + "htc");
+    
+    AdParserTurtle parser = new AdParserTurtle();
+	try {
+	    JenaMasterGraph jmg = new JenaMasterGraph("facebook");
+	    BufferedReader in;
+	    fileUtils.start();
+	    fileUtils.write(0);
+	    for (int i = 1; i < 16; i++) {
+		int k = 300000+i;
+		in = new BufferedReader(new FileReader(loadPath + "mr0_fb" + Integer.toString(k) + ".nt"));
+		parser.parse(jmg, " ", in);
+		fileUtils.write(i);
+	    }
+	    jmg.sync();
+	    jmg.close();
+	    
+	    jmg = new JenaMasterGraph("linked");
+	    for (int i = 1; i < 16; i++) {
+		int k = 300000 + i;
+		in = new BufferedReader(new FileReader(loadPath + "mr0_lk" + Integer.toString(k) + ".nt"));
+		parser.parse(jmg, " ", in);
+		fileUtils.write(i +20);
+	    }
+	    jmg.sync();
+	    jmg.close();
+	    jmg = new JenaMasterGraph("phone");
+	    for (int i = 1; i < 16; i++) {
+		int k = 300000+ i ;
+		in = new BufferedReader(new FileReader(loadPath + "mr0_ph" + Integer.toString(k) + ".nt"));
+		parser.parse(jmg, " ", in);
+		 fileUtils.write(i+40);
+	    }
+	    jmg.sync();
+	    jmg.close();
+	    fileUtils.write(1);
+	} catch (IOException e) {
+	    e.printStackTrace();
+	}
+    }
+}}}
+
 
  The scripts below are showing the code example of using querying on JENA TDB and RDF OTG in our evaluation.
 
